upate them cac rule cho agent va xoa cac file, log khong dung